--- a/enron_analysis_g7.ipynb
+++ b/enron_analysis_g7.ipynb
@@ -1349,7 +1349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Identities and Positional Ranking"
+    "# 2. Identifying Influential Roles"
    ]
   },
   {
